# ProgressReport

./: .env  docker-compose.yml
backend/: .env.sample  Dockerfile  docker-compose.yml  pyproject.toml  setup.cfg
backend/src/progress_report_server/: __main__.py
backend/src/progress_report_server/app/: README.md  main.py
backend/src/progress_report_server/app/models/: tickets.py
backend/src/progress_report_server/core/: config.py
backend/src/progress_report_server/infrastructure/: README.md  __init__.py  azure_devops.py  redmine.py
backend/src/progress_report_server/model/: README.md  ticket.py
backend/src/progress_report_server/service/: README.md  issue_parser.py
backend/tests/: test_progress_report_server.py
frontend/: .eslintrc  Dockerfile  docker-compose.yaml  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/components/elements/: Table.tsx
frontend/src/components/layout/: Dashboard.tsx
frontend/src/components/modules/: DateRangePicker.tsx  TicketsTable.tsx
frontend/src/hooks/: useAxios.ts  useTickets.ts
